--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,53 @@ services:
       - 9100:9100
     restart: always
 
+  sidecar1:
+    image: quay.io/thanos/thanos:v0.8.1
+    volumes:
+      - ./thanos/:/etc/thanos/
+      - prometheus1_vol:/prometheus
+    command:
+      - 'sidecar'
+      - '--tsdb.path=/prometheus'
+      - '--prometheus.url=http://prometheus1:9090'
+      - '--grpc-address=0.0.0.0:10091'
+      - '--http-address=0.0.0.0:10902'
+    depends_on:
+      - prometheus1
+    restart: always
+
+  sidecar2:
+    image: quay.io/thanos/thanos:v0.8.1
+    volumes:
+      - ./thanos/:/etc/thanos/
+      - prometheus2_vol:/prometheus
+    command:
+      - 'sidecar'
+      - '--tsdb.path=/prometheus'
+      - '--prometheus.url=http://prometheus2:9090'
+      - '--grpc-address=0.0.0.0:10091'
+      - '--http-address=0.0.0.0:10902'
+    depends_on:
+      - prometheus1
+    restart: always
+  
+querier:
+    image: quay.io/thanos/thanos:v0.8.1
+    command:
+      - 'query'
+      - '--grpc-address=0.0.0.0:10091'
+      - '--http-address=0.0.0.0:10902'
+      - '--query.replica-label=replica'
+      - '--store=sidecar1:10091'
+      - '--store=sidecar2:10091'
+#      - '--store=thanos-store-gateway:10091'
+    ports:
+      - 10902:10902
+    depends_on:
+      - sidecar1
+      - sidecar2
+    restart: always
+
   grafana:
     image: grafana/grafana:6.4.4
     user: "104"
