--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,7 +82,7 @@ services:
       - '--grpc-address=0.0.0.0:10091'
       - '--http-address=0.0.0.0:10902'
     depends_on:
-      - prometheus1
+      - prometheus2
     restart: always
   
   querier:
@@ -102,7 +102,7 @@ services:
       - sidecar2
     restart: always
 
-  grafana:
+  grafana1:
     image: grafana/grafana:6.4.4
     user: "104"
     depends_on:
@@ -116,3 +116,32 @@ services:
     env_file:
       - ./grafana/config.monitoring
     restart: always
+
+  grafana2:
+    image: grafana/grafana:6.4.4
+    user: "104"
+    depends_on:
+      - prometheus1
+      - prometheus2
+    ports:
+      - 3000:3000
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning/:/etc/grafana/provisioning/
+    env_file:
+      - ./grafana/config.monitoring
+    restart: always
+
+  postgres:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_USER: grafanadbuser
+      POSTGRES_PASSWORD: grafanadbpassword
+      POSTGRES_DB: grafana
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
