--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -134,7 +134,8 @@ services:
 
   postgres:
     image: postgres
-    ports: 5432:5432
+    ports:
+      - 5432:5432
     environment:
       POSTGRES_USER: grafanadbuser
       POSTGRES_PASSWORD: grafanadbpassword
