configuring grafana.ini

--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -73,12 +73,12 @@
 # as separate properties or as on string using the url properties.
 
 # Either "mysql", "postgres" or "sqlite3", it's your choice
-;type = sqlite3
-;host = 127.0.0.1:3306
-;name = grafana
-;user = root
+type = postgres
+host = docker-compose_prom_postgres_1:5432
+name = grafana
+user = grafanadbuser
 # If the password contains # or ; you have to wrap it with triple quotes. Ex """#password;"""
-;password =
+password = grafanadbpassword
 
 # Use either URL or the previous fields to configure the database
 # Example: mysql://user:secret@host:port/database
