configuring grafana db

--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -74,7 +74,7 @@
 
 # Either "mysql", "postgres" or "sqlite3", it's your choice
 type = postgres
-host = localhost:5432
+host = docker-compose_prom_postgres_1:5432
 name = grafana
 user = grafanadbuser
 # If the password contains # or ; you have to wrap it with triple quotes. Ex """#password;"""
