--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -149,3 +149,11 @@ services:
     ports:
       - 8080:8080
     restart: always
+
+  nginx:
+    image: nginx
+    ports:
+      - 3000:80
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    restart: always
