change nginx config

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 upstream loadbalance {
     least_conn;
-    server docker-compose_prom_grafana1_1:3001;
-    server docker-compose_prom_grafana2_1:3002;
+    server localhost:3001;
+    server localhost:3002;
 }
 
 server {
