--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -157,3 +157,6 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     restart: always
+    depends_on:
+      - grafana1
+      - grafana2
