correcting syntax in nginx config

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,11 +1,12 @@
-upstream loadbalance {
-    least_conn;
-    server localhost:3001;
-    server localhost:3002;
-}
-
-server {
-    location / {
-        proxy_pass http://loadbalance;
+http {
+    upstream backend {
+        server docker-compose_prom_grafana1_1:3001;
+        server docker-compose_prom_grafana2_1:3002;
+    }
+    
+    server {
+        location / {
+            proxy_pass http://backend;
+        }
     }
 }
