--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -95,7 +95,7 @@
 
 # Configuration for sending metrics to InfluxDB
 [[outputs.influxdb]]
-    urls = ["http://docker-compose_prom_influxdb_1:8086"]
+    urls = ["http://localhost:8086"]
   ## The full HTTP or UDP URL for your InfluxDB instance.
   ##
   ## Multiple URLs can be specified for a single cluster, only ONE of the
