--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -166,6 +166,7 @@ services:
     ports:
       - 8086:8086
       - 8083:8083
+      - 8089:8089/udp
     volumes:
       - ./influxdb:/var/lib/influxdb
     environment:
