--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -95,19 +95,19 @@
 
 # Configuration for sending metrics to InfluxDB
 [[outputs.influxdb]]
-  #  urls = ["http://docker-compose_prom_influxdb_1:8086"]
-  
+    urls = ["http://docker-compose_prom_influxdb_1:8086"]
+
   ## The full HTTP or UDP URL for your InfluxDB instance.
   ##
   ## Multiple URLs can be specified for a single cluster, only ONE of the
   ## urls will be written to each interval.
   # urls = ["unix:///var/run/influxdb.sock"]
-    urls = ["udp://docker-compose_prom_influxdb_1:8089"]
+  #  urls = ["udp://docker-compose_prom_influxdb_1:8089"]
   # urls = ["http://127.0.0.1:8086"]
 
   ## The target database for metrics; will be created as needed.
   ## For UDP url endpoint database needs to be configured on server side.
-    database = "influxdb_db"
+  #  database = "influxdb_db"
 
   ## The value of this tag will be used to determine the database.  If this
   ## tag is not set the 'database' option is used as the default.
