--- a/alertmanager/config.yml
+++ b/alertmanager/config.yml
@@ -47,35 +47,34 @@ inhibit_rules:
 
 
 receivers:
-  - 
-    name: 'slack'
+  - name: 'slack'
     slack_configs:
-    # Whether or not to notify about resolved alerts.
-    # The Slack webhook URL.
-    api_url: https://hooks.slack.com/services/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
-
     # The channel or user to send notifications to.
-    channel: prom-graf-than
-    # API request data as defined by the Slack webhook API.
-    # username: <tmpl_string> | default = '{{ template "slack.default.username" . }}'
-    # actions:
-    #   [ <action_config> ... ]
-    # [ callback_id: <tmpl_string> | default = '{{ template "slack.default.callbackid" . }}' ]
-    # [ color: <tmpl_string> | default = '{{ if eq .Status "firing" }}danger{{ else }}good{{ end }}' ]
-    # [ fallback: <tmpl_string> | default = '{{ template "slack.default.fallback" . }}' ]
-    # fields:
-    #   [ <field_config> ... ]
-    # [ footer: <tmpl_string> | default = '{{ template "slack.default.footer" . }}' ]
-    # [ pretext: <tmpl_string> | default = '{{ template "slack.default.pretext" . }}' ]
-    # [ short_fields: <boolean> | default = false ]
-    # [ text: <tmpl_string> | default = '{{ template "slack.default.text" . }}' ]
-    # [ title: <tmpl_string> | default = '{{ template "slack.default.title" . }}' ]
-    # [ title_link: <tmpl_string> | default = '{{ template "slack.default.titlelink" . }}' ]
-    # [ image_url: <tmpl_string> ]
-    # [ thumb_url: <tmpl_string> ]
+    - channel: '#prom-graf-than'
+      # Whether or not to notify about resolved alerts.
+      send_resolved: 'true'
+      # The Slack webhook URL.
+      api_url: https://hooks.slack.com/services/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
+      # API request data as defined by the Slack webhook API.
+      # username: <tmpl_string> | default = '{{ template "slack.default.username" . }}'
+      # actions:
+      #   [ <action_config> ... ]
+      # [ callback_id: <tmpl_string> | default = '{{ template "slack.default.callbackid" . }}' ]
+      # [ color: <tmpl_string> | default = '{{ if eq .Status "firing" }}danger{{ else }}good{{ end }}' ]
+      # [ fallback: <tmpl_string> | default = '{{ template "slack.default.fallback" . }}' ]
+      # fields:
+      #   [ <field_config> ... ]
+      # [ footer: <tmpl_string> | default = '{{ template "slack.default.footer" . }}' ]
+      # [ pretext: <tmpl_string> | default = '{{ template "slack.default.pretext" . }}' ]
+      # [ short_fields: <boolean> | default = false ]
+      # [ text: <tmpl_string> | default = '{{ template "slack.default.text" . }}' ]
+      # [ title: <tmpl_string> | default = '{{ template "slack.default.title" . }}' ]
+      # [ title_link: <tmpl_string> | default = '{{ template "slack.default.titlelink" . }}' ]
+      # [ image_url: <tmpl_string> ]
+      # [ thumb_url: <tmpl_string> ]
 
-    # # The HTTP client's configuration.
-    # [ http_config: <http_config> | default = global.http_config ]
+      # # The HTTP client's configuration.
+      # [ http_config: <http_config> | default = global.http_config ]
 
 
 # global:
