--- a/prometheus/prometheus2.yml
+++ b/prometheus/prometheus2.yml
@@ -7,16 +7,16 @@ global:
     cluster: main01
     replica: "2"
 
+# Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
+rule_files:
+  - alert.rules
+
 # Alertmanager configuration
 alerting:
   alertmanagers:
   - static_configs:
     - targets:
        - alertmanager:9093
-
-# Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
-rule_files:
-  - "alert.rules"
 
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
