--- a/alertmanager/config.yml
+++ b/alertmanager/config.yml
@@ -7,7 +7,7 @@ route:
   repeat_interval: 3h
   routes:
   - match:
-      alertname: *
+      alertname: "high_load"
   receiver: 'slack'
 receivers:
 - name: 'slack'
