--- a/prometheus/prometheus1.yml
+++ b/prometheus/prometheus1.yml
@@ -14,6 +14,7 @@ rule_files:
 # Alertmanager configuration
 alerting:
   alertmanagers:
+  - scheme: http
   - static_configs:
     - targets:
        - alertmanager:9093
